# ember_mug

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  release.toml  scrape-examples-help.html  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/workflows/: ci.yml  gh-pages.yml
docs/: index.html
egui_interface/: Cargo.toml
egui_interface/src/: app.rs  events.rs  lib.rs  main.rs  repaint_on_drop.rs  runtime.rs
egui_interface/src/runtime/: resolver.rs
ember_mug/: all.html  constant.EMBER_MUG_PUBLIC_SERVICES.html  constant.EMBER_MUG_SERVICE_UUID.html  enum.ConnectError.html  enum.KnownCharacteristic.html  enum.LiquidState.html  enum.PushEvent.html  enum.ReadError.html  enum.SearchError.html  enum.TemperatureUnit.html  enum.WriteError.html  index.html  sidebar-items.js  static.EMBER_ASSIGNED_NUMBER.html  struct.Battery.html  struct.Color.html  struct.EmberMug.html  struct.LiquidLevel.html  struct.MugMeta.html  struct.Ota.html  struct.Temperature.html  struct.TimeDateZone.html
ember_mug/battery/: struct.Battery.html
ember_mug/btle/: fn.get_mugs.html  fn.get_mugs_on_adapters.html  fn.search_adapter_for_ember.html  index.html  sidebar-items.js
ember_mug/liquid_level/: struct.LiquidLevel.html
ember_mug/liquid_state/: enum.LiquidState.html
ember_mug/mug/: enum.LiquidState.html  enum.PushEvent.html  enum.TemperatureUnit.html  index.html  sidebar-items.js  struct.Battery.html  struct.Color.html  struct.EmberMug.html  struct.LastLocation.html  struct.LiquidLevel.html  struct.MugMeta.html  struct.Ota.html  struct.Temperature.html  struct.TimeDateZone.html
ember_mug/mug/battery/: struct.Battery.html
ember_mug/mug/last_location/: struct.LastLocation.html
ember_mug/mug/liquid_level/: struct.LiquidLevel.html
ember_mug/mug/liquid_state/: enum.LiquidState.html
ember_mug/mug/mug_color/: struct.Color.html
ember_mug/mug/mug_meta/: struct.MugMeta.html
ember_mug/mug/ota/: struct.Ota.html
ember_mug/mug/push_events/: enum.PushEvent.html
ember_mug/mug/temperature_unit/: enum.TemperatureUnit.html
ember_mug/mug/time_date_zone/: struct.TimeDateZone.html
ember_mug/mug_color/: struct.Color.html
ember_mug/mug_meta/: struct.MugMeta.html
ember_mug/ota/: struct.Ota.html
ember_mug/push_events/: enum.PushEvent.html
ember_mug/temperature_unit/: enum.TemperatureUnit.html
ember_mug/time_date_zone/: struct.TimeDateZone.html
examples/: discovery.rs  example.rs  info.rs
implementors/binrw/binread/: trait.BinRead.js
implementors/binrw/binwrite/: trait.BinWrite.js
implementors/binrw/meta/: trait.ReadEndian.js  trait.WriteEndian.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
interface/: Cargo.toml
interface/src/: app.rs  events.rs  lib.rs  main.rs  repaint.rs
interface/src/runtime/: resolver.rs
src/: battery.rs  btle.rs  current_temp.rs  dsk.rs  last_location.rs  lib.rs  liquid_level.rs  liquid_state.rs  mug.rs  mug_color.rs  mug_meta.rs  name.rs  ota.rs  push_events.rs  target_temp.rs  temperature_unit.rs  time_date_zone.rs
src/discovery/: discovery.rs.html
src/ember_mug/: battery.rs.html  btle.rs.html  current_temp.rs.html  dsk.rs.html  last_location.rs.html  lib.rs.html  liquid_level.rs.html  liquid_state.rs.html  mug.rs.html  mug_color.rs.html  mug_meta.rs.html  name.rs.html  ota.rs.html  push_events.rs.html  target_temp.rs.html  temperature_unit.rs.html  time_date_zone.rs.html
src/ember_mug/mug/: battery.rs.html  current_temp.rs.html  dsk.rs.html  last_location.rs.html  liquid_level.rs.html  liquid_state.rs.html  mug_color.rs.html  mug_meta.rs.html  name.rs.html  ota.rs.html  push_events.rs.html  target_temp.rs.html  temperature_unit.rs.html  time_date_zone.rs.html
src/example/: example.rs.html
src/info/: info.rs.html
src/mug/: battery.rs  current_temp.rs  dsk.rs  last_location.rs  liquid_level.rs  liquid_state.rs  mug_color.rs  mug_meta.rs  name.rs  ota.rs  push_events.rs  target_temp.rs  temperature_unit.rs  time_date_zone.rs
trait.impl/binrw/binread/: trait.BinRead.js
trait.impl/binrw/binwrite/: trait.BinWrite.js
trait.impl/binrw/meta/: trait.ReadEndian.js  trait.WriteEndian.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
xtask/: Cargo.toml
xtask/src/: main.rs
(+3 files in other folders)
