[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
xshell = "0.2.3"
once_cell = "1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
ignore = "0.4"
